--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>Responsive Redesign</title>
+    <title>Library Responsive Redesign</title>
     <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="index.css" />
 
@@ -11,26 +11,26 @@
 
   <body>
     <main role="main" class="main">
-      <h1>Responsive Redesign</h1>
-      <h3>Objective</h3>
+      <h1>Library Responsive Redesign</h1>
+      <h2>Objective</h2>
       <p>
         Analyze one page of a website based on usability and accessibility.
         Then, draft and build and improved version.
       </p>
 
-      <h3>The Website</h3>
+      <h2>The Website</h2>
       <p>
         <a href="http://www.afpls.org/">Fulton County Library System</a> is the
         central hub for 34 libraries in Fulton County and Atlanta, Georgia.
       </p>
-      <img class="img-fluid" src="images/afpls.png" />
+      <img class="img-fluid" src="images/afpls.png" alt="original website" />
 
-      <h3>Analysis</h3>
+      <h2>Analysis</h2>
 
       <dt>Goal of website</dt>
       <dd>Easy access to many resources from the home page.</dd>
 
-      <h5>Usability Problems</h5>
+      <h3>Usability Problems</h3>
 
       <dd>
         The page is cluttered with information
@@ -62,6 +62,21 @@
       </dd>
       <dt>Memorability</dt>
       <dd>
+        Navigation is not cohesive
+        <ul>
+          <li>
+            It's hard to remember where other pages are located because they're
+            so sporadic (in sidebars, nav bars, linked, etc.)
+          </li>
+          <li>
+            Uses drop down menu on top right for "I want to..." instead of
+            intuitive design
+          </li>
+        </ul>
+      </dd>
+
+      <dt>Efficiency</dt>
+      <dd>
         Heavily used actions are not emphasized
         <ul>
           <li>Coronavirus updates are at the bottom</li>
@@ -70,19 +85,7 @@
         </ul>
       </dd>
 
-      <dt>Efficiency</dt>
-
-      <dd>
-        Navigation is difficult
-        <ul>
-          <li>Navigation is not cohesive (sidebars, nav bars, etc)</li>
-          <li>
-            Use of drop down menu on top right instead of intuitive design
-          </li>
-        </ul>
-      </dd>
-
-      <h5>Accessibility Concerns</h5>
+      <h3>Accessibility Concerns</h3>
       <dd>
         The Fulton County Library System website has multiple accessibility
         errors and alerts according to WebAIM WAVE. There are a few instances of
@@ -95,7 +98,7 @@
         people with different accessibility needs.
       </dd>
 
-      <h3>Low-Fi Mockup</h3>
+      <h2>Low-Fi Mockup</h2>
       <p>
         Layouts consolidate navigation from the original website, focusing on
         the navigation bar at the top and removing the drop down menus and
@@ -104,16 +107,39 @@
         Additionally, other items of interest are given more emphasis on the
         home page (for example, databse links, news, and search).
       </p>
-      <img class="img-fluid" src="images/low-fi.png" />
+      <img class="img-fluid" src="images/low-fi.png" alt="low-fi mockup" />
 
-      <h3>Visual Style Guide</h3>
+      <h2>Visual Style Guide</h2>
       <p>
         Color palette was taken from the Fulton County logo (blue and orange),
         yet the orange was shifted toward yellow to be more timeless. Typography
         was chosen to be cohesive to be lively and visually interesting yet
         confident and sleek.
       </p>
-      <img class="img-fluid" src="images/visual-style.png" />
+      <img
+        class="img-fluid"
+        src="images/visual-style.png"
+        alt="visual style guide"
+      />
+
+      <h2>High Fi Prototype</h2>
+      <img class="img-fluid" src="images/high-fi.png" alt="high-fi prototype" />
+
+      <h2>Implementation</h2>
+      <a href="https://ancient-headland-15502.herokuapp.com/"
+        >Redesign is deployed here</a
+      >
+      <img
+        class="img-fluid"
+        src="images/screenshot.png"
+        alt="deployment screenshot"
+      />
+      <p class="mb-5">
+        The validators and accessibility checkers give insight that is
+        undetectable to the eye. Even though I learned about best practices
+        earlier, using WAVE on my own submission showed me the things I forgot
+        about, such as an alt tag here and there.
+      </p>
     </main>
   </body>
 </html>
