--- a/home.html
+++ b/home.html
@@ -109,7 +109,7 @@
       </p>
       <img class="img-fluid" src="images/low-fi.png" alt="low-fi mockup" />
 
-      <h2>Visual Style Guide</h2>
+      <h2 class="mt-2">Visual Style Guide</h2>
       <p>
         Color palette was taken from the Fulton County logo (blue and orange),
         yet the orange was shifted toward yellow to be more timeless. Typography
