--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
           <li>Color palette isn't coordinated</li>
           <li>
             Lack of contrast (both the white and black text on light green
-            background are hard to read
+            background are hard to read)
           </li>
           <li>Headers don’t stand out against pictures (databases, etc.)</li>
-          <li>Column sizes are inconsistent</li>
-          <li>Use of pictures of text instead of text (left column)</li>
+          <li>Column sizes and spacing are inconsistent</li>
+          <li>Use of pictures of text instead of text (on the left column)</li>
         </ul>
       </dd>
       <dt>Learnability</dt>
@@ -122,7 +122,7 @@
         alt="visual style guide"
       />
 
-      <h2>High Fi Prototype</h2>
+      <h2>High-Fi Prototype</h2>
       <img class="img-fluid" src="images/high-fi.png" alt="high-fi prototype" />
 
       <h2>Implementation</h2>
