updated low fi and added conclusion

--- a/home.html
+++ b/home.html
@@ -134,11 +134,22 @@
         src="images/screenshot.png"
         alt="deployment screenshot"
       />
-      <p class="mb-5">
+      <p>
         The validators and accessibility checkers give insight that is
         undetectable to the eye. Even though I learned about best practices
         earlier, using WAVE on my own submission showed me the things I forgot
         about, such as an alt tag here and there.
+      </p>
+
+      <h2>Conclusion</h2>
+      <p class="mb-5">
+        The original library website has many important functions, all of which
+        I wanted to make accessible in the redesign, however, with a more
+        simplified design, color palette, and fewer photos. The library is not
+        trying to sell a product, but serves a more utilitarian purpose. The
+        website offers visual interest when appropriate (icons, pictures of
+        events), but mainly lets the content breathe so that a user can quickly
+        access whatever they need.
       </p>
     </main>
   </body>
